--- a/platformics/codegen/templates/api/mutations.py.j2
+++ b/platformics/codegen/templates/api/mutations.py.j2
@@ -12,7 +12,7 @@ from api.files import File, create_file, upload_file, mark_upload_complete, conc
 {%- endif %}
 
 {%- for class in classes %}
-from api.types.{{ class.snake_name }} import {{ class.name }}, create_{{ class.snake_name }}, update_{{ class.snake_name }}, delete_{{ class.snake_name }}
+from api.types.{{ class.snake_name }} import {{ class.name }}, {%- if class.create_fields %}create_{{ class.snake_name }}, {%- endif %}{%- if class.mutable_fields %}update_{{ class.snake_name }}, {%- endif %}delete_{{ class.snake_name }}
 {%- endfor %}
 
 @strawberry.type
@@ -27,8 +27,12 @@ class Mutation:
 {%- for class in classes %}
 
     # {{ class.name }} mutations
+    {%- if class.create_fields %}
     create_{{ class.snake_name }}: {{ class.name }} = create_{{ class.snake_name }}
+    {%- endif %}
+    {%- if class.mutable_fields %}
     update_{{ class.snake_name }}: Sequence[{{ class.name }}] = update_{{ class.snake_name }}
+    {%- endif %}
     delete_{{ class.snake_name }}: Sequence[{{ class.name }}] = delete_{{ class.snake_name }}
 {%- endfor %}
 
