--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -190,9 +190,7 @@ class {{ cls.name }}WhereClause(TypedDict):
     collection_id: IntComparators | None
     {%- for attr in cls.owned_fields %}
         {%- if attr.type == "uuid" %}
-            {%- if attr.name != "entity_id" %}
     {{ attr.name }}: Optional[UUIDComparators] | None
-            {%- endif %}
         {%- elif attr.type == "string" %}
     {{ attr.name }}: Optional[StrComparators] | None
         {%- elif attr.is_enum %}
@@ -216,7 +214,7 @@ Supported ORDER BY clause attributes
 @strawberry.input
 class {{ cls.name }}OrderByClause(TypedDict):
     {%- for attr in cls.visible_fields %}
-        {%- if attr.type != "File" and attr.name != "entity_id" and not attr.multivalued %}
+        {%- if attr.type != "File" and not attr.multivalued %}
             {%- if attr.inverse %}
     {{ attr.name }}: Optional[Annotated["{{ attr.type }}OrderByClause", strawberry.lazy("api.types.{{ attr.related_class.snake_name }}")]] | None
             {%- else %}
@@ -239,9 +237,7 @@ Define {{ cls.name }} type
 class {{ cls.name }}(EntityInterface):
     {%- for attr in cls.visible_fields %}
         {%- if attr.type == "uuid" %}
-           {%- if attr.name != "entity_id" %}
     {{ attr.name }}: {{ getType("strawberry.ID", attr.required) }}
-           {%- endif %}
         {%- elif attr.type == "string" %}
     {{ attr.name }}: {{ getType("str", attr.required) }}
         {%- elif attr.type == "Array2dInt" %}
@@ -356,14 +352,9 @@ Mutation types
     {%- endif %}
 {%- endmacro %}
 
-{# Generate Create and Update Strawberry input types #}
-{%- for action in ["Create", "Update"] %}
-@strawberry.input()
-class {{ cls.name }}{{ action }}Input:
-    {%- for attr in cls.visible_fields %}
-        {%- if attr.readonly %} {# Don't allow setting readonly fields, ever #}
-        {%- elif action == "Update" and (not attr.mutable) %} {# Don't allow updating mutable fields #}
-        {%- elif attr.type == "string" %}
+{% macro getInputFields(fields) -%}
+    {%- for attr in fields %}
+        {%- if attr.type == "string" %}
     {{ attr.name }}: {{ getTypeMutation(action, "str", attr.required) }}
         {%- elif attr.type == "Array2dInt" %}
     {{ attr.name }}: {{ getTypeMutation(action, "List[List[int]]", attr.required) }}
@@ -379,12 +370,24 @@ class {{ cls.name }}{{ action }}Input:
     {{ attr.name }}: {{ getTypeMutation(action, "datetime.datetime", attr.required) }}
         {%- elif attr.type == "File" %}
     {{ attr.name }}_id: {{ getTypeMutation(action, "strawberry.ID", attr.required) }}
-        {%- elif attr.inverse and not attr.multivalued %} {# Don't include multivalued fields, only fields where can update an ID #}
+        {%- elif attr.inverse and not attr.multivalued %} {# Don't include multivalued fields, only fields where we can update an ID #}
     {{ attr.name }}_id: {{ getTypeMutation(action, "strawberry.ID", attr.required) }}
         {%- endif %}
     {%- endfor %}
-{%- endfor %}
+{%- endmacro %}
 
+{# Generate Create and Update Strawberry input types #}
+{%- if cls.create_fields %}
+@strawberry.input()
+class {{ cls.name }}CreateInput:
+    {{- getInputFields(cls.create_fields) }}
+{%- endif %}
+
+{%- if cls.mutable_fields %}
+@strawberry.input()
+class {{ cls.name }}UpdateInput:
+    {{- getInputFields(cls.mutable_fields) }}
+{%- endif %}
 
 """
 ------------------------------------------------------------------------------
@@ -446,6 +449,7 @@ async def resolve_{{ cls.plural_snake_name }}_aggregate(
     aggregate_output = format_{{ cls.snake_name }}_aggregate_output(rows)
     return {{ cls.name }}Aggregate(aggregate=aggregate_output)
 
+{%- if cls.create_fields %}
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def create_{{ cls.snake_name }}(
     input: {{ cls.name }}CreateInput,
@@ -459,7 +463,7 @@ async def create_{{ cls.snake_name }}(
     """
     params = input.__dict__
 
-    {%- for field in self.visible_fields %}
+    {%- for field in self.create_fields %}
         {%- if field.name == "collection_id" and (not field.readonly) %}
     # Validate that user can create entity in this collection
     attr = {"collection_id": input.collection_id}
@@ -470,8 +474,24 @@ async def create_{{ cls.snake_name }}(
     {%- endfor %}
 
     # Validate that the user can read all of the entities they're linking to.
-    # If we have any system_writable fields present, make sure that our auth'd user *is* a system user
+    {%- for field in cls.create_fields %}
+        {%- if field.is_entity and not field.is_virtual_relationship %}
+    # Check that {{field.name}} relationship is accessible.
+    if input.{{field.name}}_id:
+        {{field.name}} = get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": input.{{field.name}}_id } }, [], CerbosAction.VIEW)
+        if not {{field.name}}:
+            raise PlatformicsException("Unauthorized: {{field.name}} does not exist")
+        {%- endif %}
+    {%- endfor %}
 
+    # Validate that the user can read all of the entities they're linking to.
+    {%- if cls.system_only_create %}
+    # If we have any system_writable fields present, make sure that our auth'd user *is* a system user
+    if not is_system_user:
+    {%- endif %}
+    {%- for field in cls.system_only_create %}
+        input.{{field.name}} = None
+    {%- endfor %}
 
     # Save to DB
     params["owner_user_id"] = int(principal.id)
@@ -479,8 +499,10 @@ async def create_{{ cls.snake_name }}(
     session.add(new_entity)
     await session.commit()
     return new_entity
+{%- endif %}
 
 
+{%- if cls.mutable_fields %}
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def update_{{ cls.snake_name }}(
     input: {{ cls.name }}UpdateInput,
@@ -501,7 +523,23 @@ async def update_{{ cls.snake_name }}(
         raise PlatformicsException("No fields to update")
 
     # Validate that the user can read all of the entities they're linking to.
+    {%- for field in cls.mutable_fields %}
+        {%- if field.is_entity and not field.is_virtual_relationship %}
+    # Check that {{field.name}} relationship is accessible.
+    if input.{{field.name}}_id:
+        {{field.name}} = get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": input.{{field.name}}_id } }, [], CerbosAction.VIEW)
+        if not {{field.name}}:
+            raise PlatformicsException("Unauthorized: {{field.name}} does not exist")
+        {%- endif %}
+    {%- endfor %}
+
+    {%- if cls.system_only_mutable %}
     # If we have any system_writable fields present, make sure that our auth'd user *is* a system user
+    if not is_system_user:
+    {%- endif %}
+    {%- for field in cls.system_only_mutable %}
+        input.{{field.name}} = None
+    {%- endfor %}
 
     # Fetch entities for update, if we have access to them
     entities = await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [], CerbosAction.UPDATE)
@@ -526,6 +564,7 @@ async def update_{{ cls.snake_name }}(
                 setattr(entity, key, params[key])
     await session.commit()
     return entities
+{%- endif %}
 
 
 @strawberry.mutation(extensions=[DependencyExtension()])
