--- a/platformics/codegen/templates/cerbos/policies/class_name.yaml.j2
+++ b/platformics/codegen/templates/cerbos/policies/class_name.yaml.j2
@@ -8,6 +8,11 @@ resourcePolicy:
     - common_roles
   resource: "{{cls.snake_name}}"
   rules:
+    - actions: ['view']
+      effect: EFFECT_ALLOW
+      derivedRoles:
+        - project_viewer
+
     - actions: ['view', 'create', 'update']
       effect: EFFECT_ALLOW
       derivedRoles:
