--- a/platformics/codegen/tests/test_schemas/overrides/api/extra_test_code.py.j2
+++ b/platformics/codegen/tests/test_schemas/overrides/api/extra_test_code.py.j2
@@ -1,4 +1,4 @@
     @strawberry.field
     def uncaught_exception(self) -> str:
         # Trigger an AttributeException
-        return self.kaboom
+        return self.kaboom  # type: ignore
