--- a/platformics/codegen/templates/test_infra/factories/class_name.py.j2
+++ b/platformics/codegen/templates/test_infra/factories/class_name.py.j2
@@ -79,7 +79,7 @@ class {{ cls.name }}Factory(CommonFactory):
     {{ field.name }} = fuzzy.FuzzyText()
                 {%- elif field.type == "Array2dInt" %}
     {{ field.name }} = factory.LazyAttribute(lambda o: [ [random.randint(0, 10) for _ in range(5)] ] * random.randint(2, 5) )
-                {%- elif field.type == "int" %}
+                {%- elif field.type == "integer" %}
     {{ field.name }} = fuzzy.FuzzyInteger(1, 1000)
                 {%- elif field.type == "float" %}
     {{ field.name }} = fuzzy.FuzzyFloat(1, 100)
