Handle more types.

--- a/platformics/codegen/templates/api/validators/class_name.py.j2
+++ b/platformics/codegen/templates/api/validators/class_name.py.j2
@@ -24,21 +24,16 @@ from typing_extensions import Annotated
     {%- endif %}
 {%- endmacro %}
 
-{# Generate Create and Update Strawberry input types #}
-{%- for action in ["Create", "Update"] %}
-class {{ cls.name }}{{ action }}InputValidator(BaseModel):
-    # Pydantic stuff
-    model_config = ConfigDict(from_attributes=True)
-
-    collection_id: Annotated[{{ getTypeValidation(action, "int", true) }}, Field()]
-    {%- for attr in cls.owned_fields %}
+{% macro getInputFields(fields) -%}
+    {%- for attr in fields %}
         {%- if attr.type == "uuid" %} {# Don't allow setting UUID fields #}
+    {{ attr.name }}: Annotated[{{ getTypeValidation(action, "uuid.UUID", attr.required) }}, Field()]
         {%- elif attr.type == "string" %}
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "str", attr.required) }}, Field()]
         {%- elif attr.is_enum %}
 # TODO what do we do about enums here. GraphQL is supposed to take care of that for us I think?
 #    {{ attr.name }}: Annotated[{{ getTypeValidation(action, attr.type, attr.required) }}, Field()]
-        {%- elif attr.type == "int" %}
+        {%- elif attr.type == "integer" %}
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "int", attr.required) }}, Field()]
         {%- elif attr.type == "float" %}
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "float", attr.required) }}, Field()]
@@ -48,8 +43,23 @@ class {{ cls.name }}{{ action }}InputValidator(BaseModel):
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "datetime.datetime", attr.required) }}, Field()]
         {%- elif attr.type == "File" %}
     {{ attr.name }}_id: Annotated[{{ getTypeValidation(action, "uuid.UUID", attr.required) }}, Field()]
-        {%- elif attr.inverse and not attr.multivalued %} {# Don't include multivalued fields, only fields where can update an ID #}
+        {%- elif attr.is_entity and not attr.is_virtual_relationship %} {# Don't include multivalued fields, only fields where we can update an ID #}
     {{ attr.name }}_id: Annotated[{{ getTypeValidation(action, "uuid.UUID", attr.required) }}, Field()]
         {%- endif %}
     {%- endfor %}
-{%- endfor %}
+{%- endmacro %}
+
+{# Generate Create and Update pydantic validators #}
+{%- if cls.create_fields %}
+class {{ cls.name }}CreateInputValidator(BaseModel):
+    # Pydantic stuff
+    model_config = ConfigDict(from_attributes=True)
+    {{- getInputFields(cls.create_fields) }}
+{%- endif %}
+
+{%- if cls.mutable_fields %}
+class {{ cls.name }}UpdateInputValidator(BaseModel):
+    # Pydantic stuff
+    model_config = ConfigDict(from_attributes=True)
+    {{- getInputFields(cls.mutable_fields) }}
+{%- endif %}
